--- a/邀请函/css/demo.css
+++ b/邀请函/css/demo.css
@@ -26,7 +26,7 @@ body {
 .demo-1 {
 	--color-text: #fff;
 	--color-bg: #ddd;
-	--color-link: rgb(0, 217, 255);
+	--color-link:#fbd54a;
 	--color-link-hover: #2735da;
 	--color-info: #fff;
 	/*--color-main-bg: ../img/3.jpg;*/
@@ -53,7 +53,7 @@ body {
 .demo-2 {
 	--color-text: #fff;
 	--color-bg: #333;
-	--color-link:rgb(0, 217, 255);
+	--color-link:#fbd54a;
 	--color-link-hover: #f44e5e;
 	--color-info: #fff;
 	background:url(../img/刘.jpg) no-repeat center fixed;
@@ -126,7 +126,7 @@ body {
 .demo-5 {
 	--color-text: #c04444;
 	--color-bg: #333;
-	--color-link:rgb(0, 217, 255);
+	--color-link:#fbd54a;
 	--color-link-hover: #c14343;
 	--color-info: #fff;
 	background:url(../img/欧阳.jpg) no-repeat center fixed;
